--- a/templates/index.html
+++ b/templates/index.html
@@ -9,14 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="/static/css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Header Navigation -->
     <nav class="header-nav">
         <div class="nav-content">
             <a href="#" class="logo">
-                <img src="{{ url_for('static', filename='img/LightweightLion.png') }}" alt="Columbia Lightweight Lion">
+                <img src="/static/img/LightweightLion.png" alt="Columbia Lightweight Lion">
                 <span class="logo-text">C150</span>
             </a>
             <div class="nav-links">
@@ -222,6 +222,6 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+    <script src="/static/js/app.js"></script>
 </body>
 </html>
